--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'models'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,6 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation "com.sparkjava:spark-core:2.6.0"
     implementation 'org.slf4j:slf4j-simple:1.7.21'
